# coach-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  init_db.sql  main.py  pyproject.toml  railway.toml  release-please-config.json
.claude/: settings.json
.github/workflows/: ci.yml  release-please.yml
coach/: auth.py  config.py  db.py  models.py  server.py
coach/ops/: meals.py  payloads.py  summary.py  weights.py  workouts.py
docs/superpowers/plans/: 2026-05-10-calorie-coach-mcp.md
docs/superpowers/specs/: 2026-05-10-calorie-coach-mcp-design.md
src/coach/: db.py  models.py  server.py  time.py
src/coach/ops/: meals.py  payloads.py  summary.py
