[project]
name = "coach"
version = "0.1.0"
description = "Personal calorie & sport coach MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.pyright]
include = ["src", "main.py"]
extraPaths = ["src"]
