[project]
name = "coach"
version = "0.1.0"
description = "Personal calorie & sport coach MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
coach = "main:main"
pull:env =""

[tool.hatch.build.targets.wheel]
packages = ["coach"]

[tool.pyright]
include = ["coach", "main.py"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
